Change from ems to .unit(), fix JS spacing

--- a/src/disclosures/css/cf-enhancements.less
+++ b/src/disclosures/css/cf-enhancements.less
@@ -30,7 +30,7 @@
 
 .btn + .btn {
   .respond-to-max(@bp-xs-max, {
-    margin-top: 0.625em;
+    margin-top: unit(10px / @base-font-size-px, em);
     margin-left: auto;
   });
 }
